	* Changed the sample framework to check for fullscreen DXGI swap chain before disposing.
	* Removed unused testing code from SimpleModel10.

Math
	* Added an overload of Ray.Intersects that returns the barycentric hit coordinates.
	* Moved the Direct2D Matrix3x2 type into the main math library.
	* Added several helper methods to the Matrix3x2 type.

Direct2D
	* Added constructors for Bitmap that allow construction via DXGI shared surfaces.

Direct3D 9
	* Fixed a memory in Utilities.ReadRange that affected many BaseMesh methods.
	* Fixed a typo in the caps structure that filled VolumeTextureFilterCaps with the wrong value.
	* Fixed memory issue in Include interface.
	* Changed AnimationOutput to be a reference type, and pinned the memory to receive animation updates.
	* Added an overload to AnimationController.RegisterAnimationOutput to take a Frame instead.
	
Direct3D 10
	* Added missing creation method overloads to Effect.
	* Added missing Get/SetRawValue methods to EffectVariable.
	* Added GetInputLayout to the InputAssember device stage.
	* Added GetPrimitiveTopology to the InputAssember device stage.
	* Added GetIndexBuffer to the InputAssember device stage.
	* Added GetVertexBuffers to the InputAssember device stage.
	* Added ResourceOptionFlags.GdiCompatible and ResourceOptionFlags.KeyedMutex.
	* Added Resource.SaveTextureToFile, which allows for saving a texture without knowing its concrete type.
	* Fixed a COM reference leak in Device.OpenSharedResource.

Direct3D 11
	* Fixed a COM reference leak in Device.OpenSharedResource.
	* Added IsDataAvailable to the DeviceContext interface.
	* Added Resource.SaveTextureToFile, which allows for saving a texture without knowing its concrete type.

DXGI
	* Changed SwapChain.Dispose to throw if the adapter is in fullscreen mode. This prevents a crash inside DXGI.
	* Added IsFullScreen property to SwapChain as a convenient alternative to GetFullScreenState.